Change the home page and add original data service, and add mockup data.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,140 +1,1 @@
-<weui-tabbar>    
-  <!-- 首页 -->
-  <weui-tab heading="首页" [icon]="'<img src=./assets/images/icon/home.png>'">
-    <weui-searchbar (search)="onSearch($event)" (cancel)="onCancel()" (clear)="onClear()" (submit)="onSubmit($event)"></weui-searchbar>
-    <weui-swiper [options]="{effect: 'fade', spaceBetween: 30, autoplay: 2000}">
-      <div class="swiper-container">
-        <!-- 容器（必选） -->
-        <div class="swiper-wrapper">
-          <div class="swiper-slide" *ngFor="let i of swiperImgs">
-            <img class="swiperImg" src="{{i.url}}">
-          </div>
-        </div>
-        <!-- 分页（可选） -->
-        <div class="swiper-pagination"></div>
-      </div>
-    </weui-swiper>
-
-    <div class="weui-panel weui-panel_access">
-      <!-- <div class="weui-panel__hd">商品列表</div> -->
-      <div class="weui-panel__bd">
-        <ul>
-          <li *ngFor="let p of products" onselect="onSelect(p)">
-            <div>
-              <a href="#"><img class="proImg" src={{p.masterImg}} alt="商品图片"></a>
-            </div>
-            <div class="proDescPanel">
-              <a class="productName" href="#">{{p.name}}</a>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </weui-tab>
-
-  <!-- 活动页 -->
-  <weui-tab heading="活动" [icon]="'<img src=./assets/images/icon/activity.png>'">
-    <div class="weui-panel weui-panel_access">
-      <div class="weui-panel__hd">最新活动</div>
-      <div class="weui-panel__bd">
-        <div class="activity-slide" *ngFor="let i of activityImgs">
-          <img class="swiperImg" src="{{i.url}}">
-        </div>
-
-        <!-- <div *ngFor="let sp of suitProducts">
-          <a href="#" class="weui-media-box weui-media-box_appmsg">
-            <div class="weui-media-box__hd">
-              <img class="weui-media-box__thumb" src={{sp.masterImg}}>
-            </div>
-            <div class="weui-media-box__bd">
-              <p>{{sp.name}}</p>
-            </div>
-          </a>
-        </div> -->
-      </div>
-    </div>
-  </weui-tab>
-
-  <!-- 购物车页 -->
-  <weui-tab heading="购物车" [icon]="'<img src=./assets/images/icon/cart.png>'">
-    <div class="weui-panel weui-panel_access">
-      <div class="weui-panel__hd">我的购物车</div>
-      <div class="weui-panel__bd" *ngFor="let p of activityProducts">
-        <div class="weui-cell weui-cell_swiped" weui-swipe>
-          <div class="weui-cell__bd">
-            <div class="weui-cell">
-              <!-- <div class="weui-cell__hd"><img src={{p.imgSrc}} alt="" style="width:20px;margin-right:5px;display:block"></div> -->
-              <div class="weui-cell__hd">
-                <input type="radio" class="weui_check" name="checkbox1" id="s11" checked="checked">
-                <i class="weui_icon_checked"></i>
-                <br>
-              </div>
-              <div class="weui-cell__bd">
-                <p style="font-size:50%">{{p.name}}</p>
-              </div>
-              <div class="weui-cell__ft">
-                <weui-stepper [min]="1" [max]="10"></weui-stepper>
-              </div>
-            </div>
-          </div>
-          <div class="weui-cell__ft">
-            <a class="weui-swiped-btn weui-swiped-btn_warn" href="javascript:">删除</a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="button-sp-area">
-      <button weui-button [weui-mini]="'mini'" [weui-type]="'default'">成团</button>
-      <button weui-button [weui-mini]="'mini'" [weui-type]="'default'">购买</button>
-    </div>
-  </weui-tab>
-  <!-- 个人中心页 -->
-  <weui-tab heading="个人中心" [icon]="'<img src=./assets/images/icon/user.png>'">
-    <div class="weui-panel weui-panel_access">
-      <div class="weui-panel__hd">未登录</div>
-      <div class="weui-panel__bd">
-        <a class="weui-cell weui-cell_access" href="javascript:;">
-          <div class="weui-cell__bd">
-            <p>我的订单</p>
-          </div>
-          <div class="weui-cell__ft">查看全部</div>
-        </a>
-        <weui-navbar>
-          <weui-tab heading="待付款">
-          </weui-tab>
-          <weui-tab heading="待拼单" (select)="onSelect()">
-          </weui-tab>
-          <weui-tab heading="待发货">
-          </weui-tab>
-          <weui-tab heading="待收货">
-          </weui-tab>
-          <weui-tab heading="待评价">
-          </weui-tab>
-        </weui-navbar>
-        <div class="weui-cells">
-          <a class="weui-cell weui-cell_access" href="javascript:;">
-            <div class="weui-cell__bd">
-              <p>我的拼单</p>
-            </div>
-            <div class="weui-cell__ft">
-            </div>
-          </a>
-          <a class="weui-cell weui-cell_access" href="javascript:;">
-            <div class="weui-cell__bd">
-              <p>收货地址</p>
-            </div>
-            <div class="weui-cell__ft">
-            </div>
-          </a>
-        </div>
-        <a class="weui-cell weui-cell_access" href="javascript:;">
-          <div class="weui-cell__bd">
-            <p>官方客服</p>
-          </div>
-          <div class="weui-cell__ft">
-          </div>
-        </a>
-      </div>
-    </div>
-  </weui-tab>  
-</weui-tabbar>
+<app-shopwindow></app-shopwindow>
